--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,10 @@
             <artifactId>testng</artifactId>
             <version>6.8.8</version>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.1</version>
+        </dependency>
     </dependencies>
 </project>
